# roleforge

./: .gitignore  AGENTS.md  CHANGELOG.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  LAUNCH_CHECKLIST.md  LICENSE  README.md  WEBSITE_DESCRIPTION.md  langgraph_pricing_advisor.py  market_research_agent.py  package_bundles.py  pyproject.toml  validate_roles.py
.github/workflows/: ci.yml
archive/research/: llm_raw_response.txt  market_recommendation_v2.json
examples/: 01_crewai_integration.ipynb  02_langchain_integration.ipynb  03_langgraph_integration.ipynb  code_patterns.py  distribution_strategy_advisor.py  quick_demo.py  role_selection_demo.py  strategy_advisor.py  usage.py
graphs/: templates.py
launch_kit/: HACKER_NEWS.md  LINKEDIN.md  REDDIT.md  TWITTER.md
memory/: session_notes.md
overlays/crewai/: data_scientist.yaml  narrative_architect.yaml
overlays/langgraph/: data_scientist.yaml
research_output/: market_recommendation.json  market_research_report.md  market_research_report_v2.md
roles/creative_writing/: narrative_architect.yaml
schemas/: role.schema.json
src/: __init__.py  loader.py  models.py  role_selector.py  validators.py
src/adapters/: __init__.py  base.py  crewai_adapter.py  langchain_adapter.py  langgraph_adapter.py
store/: README.md
store/complete_bundle/: README.md
store/domain_packs/: README.md
store/enterprise_bundle/: README.md
store/professional_pack/: README.md
store/starter_pack/: README.md  (+3 more)
tests/: test_core.py  test_role_selector.py
tools/: market_research_agent_v2.py  package_bundles.py  validate_roles.py
