[project]
name = "roleforge"
version = "0.1.0"
description = "Framework-agnostic YAML library for agent roles with CrewAI, LangChain, and LangGraph adapters"
readme = "README.md"
license = {text = "Elastic License 2.0"}
requires-python = ">=3.11"
dependencies = [
    "crewai>=1.14.7",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "pyyaml>=6.0",
    "pytest>=7.0",
    "jupyter>=1.1.1",
    "ddgs>=9.14.4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
